--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 						<div id="mapOptionsOther">
 							<label title="Show/Hide region-colored rectangles over zones."><img data-src="img/map/rectangle.png" /><input id="opt_bol_showZoneRectangles" type="checkbox" /> Show zone rectangles</label>
 							<label title="Double click on the map to lay/remove a personal pin.<br />This option will draw a path from these pins."><img data-src="img/map/pin_white.png" /><input id="opt_bol_showPersonalPaths" type="checkbox" /> Show personal paths</label>
-							<label title="Show/Hide the colored chain paths of World Bosses."><img data-src="img/map/pin_green.png" /><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths</label>
-							<label title="Automatically scroll the map to the next predicted World Boss event.<br />You'll need to be on the chains page."><img data-src="img/map/path.png" /><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
+							<label title="Show/Hide the colored chain paths of world bosses."><img data-src="img/map/pin_green.png" /><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths</label>
+							<label title="Automatically scroll the map to the next predicted world boss event.<br />You'll need to be on the chains page."><img data-src="img/map/path.png" /><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
 							<label><img data-src="img/map/floor.png" /><input id="opt_int_setFloor" type="range" min="0" max="3" step="1" title="Set map floor level.<br />Example: Rata Sum has multiple floors." /></label>
 							<br />
 							<label title="Show/Hide the side app panel."><img data-src="img/map/panel.png" /><input id="opt_bol_showPanel" type="checkbox" /> Show app panel</label>
