Spam trap for undefined users

--- a/mapsrc.html
+++ b/mapsrc.html
@@ -438,6 +438,7 @@ These open world chests are separate from Jumping Puzzles and Mini-Dungeons. Hol
 	</div>
 	<button id="chlDungeonUncheck" class="cssRight btnUncheck"><img data-src="img/ui/uncheck.png" /></button>
 	<div class="chlDungeonBar" data-name="AC">
+		<img class="chlDungeonNight" src="img/ui/day_night.png" alt="Night" /> 
 		<label title="Hodgins"><input data-money="15500" data-mode="E" type="checkbox" />1</label>
 		<label title="Detha"><input data-money="15500" data-mode="E" type="checkbox" />2</label>
 		<label title="Tzark"><input data-money="15500" data-mode="E" type="checkbox" />3</label>
@@ -450,18 +451,21 @@ These open world chests are separate from Jumping Puzzles and Mini-Dungeons. Hol
 		<label title="Story"><input data-money="5000" data-mode="S" type="checkbox" />S</label>
 	</div>
 	<div class="chlDungeonBar" data-name="TA">
+		<img class="chlDungeonNight" src="img/ui/day_night.png" alt="Night" /> 
 		<label title="Up Fyonna"><input data-money="10500"  data-mode="E" type="checkbox" />1</label>
 		<label title="Forward Vevina"><input data-money="10500"  data-mode="E" type="checkbox" />2</label>
 		<label title="Aetherpath"><input data-money="20500" data-mode="E" type="checkbox" />3</label>
 		<label title="Story"><input data-money="5000" data-mode="S" type="checkbox" />S</label>
 	</div>
 	<div class="chlDungeonBar" data-name="SE">
+		<img class="chlDungeonNight" src="img/ui/day_night.png" alt="Night" /> 
 		<label title="Fergg"><input data-money="10500" data-mode="E" type="checkbox" />1</label>
 		<label title="Rasolov"><input data-money="10500" data-mode="E" type="checkbox" />2</label>
 		<label title="Koptev"><input data-money="10500" data-mode="E" type="checkbox" />3</label>
 		<label title="Story"><input data-money="5000" data-mode="S" type="checkbox" />S</label>
 	</div>
 	<div class="chlDungeonBar" data-name="COF">
+		<img class="chlDungeonNight" src="img/ui/day_night.png" alt="Night" /> 
 		<label title="Ferrah"><input data-money="10500" data-mode="E" type="checkbox" />1</label>
 		<label title="Magg"><input data-money="10500" data-mode="E" type="checkbox" />2</label>
 		<label title="Rhiannon"><input data-money="10500" data-mode="E" type="checkbox" />3</label>
@@ -474,6 +478,7 @@ These open world chests are separate from Jumping Puzzles and Mini-Dungeons. Hol
 		<label title="Story"><input data-money="5000" data-mode="S" type="checkbox" />S</label>
 	</div>
 	<div class="chlDungeonBar" data-name="COE">
+		<img class="chlDungeonNight" src="img/ui/day_night.png" alt="Night" /> 
 		<label title="Submarine"><input data-money="10500" data-mode="E" type="checkbox" />1</label>
 		<label title="Teleporter"><input data-money="10500" data-mode="E" type="checkbox" />2</label>
 		<label title="Front Door"><input data-money="10500" data-mode="E" type="checkbox" />3</label>
