--- a/mapsrc.html
+++ b/mapsrc.html
@@ -530,7 +530,7 @@ These open world chests are separate from Jumping Puzzles and Mini-Dungeons. Hol
 <h2>Icons</h2>	
 <p>Expanding a page's section will show that section's map icons, and collapsing a section hides them. To view multiple sections' icons, click the section names and keep them expanded. Else, use the ▼ popup navigation menu to view one section at a time. Map icons are interactive by clicking/double clicking, most of which causes the map to zoom in that icon, or zoom out back to default.</p>
 <h2>Pins</h2>	
-<p>Lay personal pins by double clicking an empty spot on the map. A path is drawn when you laid more than one pin; to insert a pin within a path, double click the path. Move by a pin by click-dragging it, and remove a pin by double clicking it. To get coordinates of a pin or a path, just single click it. You can delete all personal pins by right clicking any pin.</p>
+<p>Lay personal pins by double clicking an empty spot on the map. A path is drawn when you laid more than one pin; to insert a pin within a path, double click the path. Move by a pin by click-dragging it, and remove a pin by double clicking it. To get coordinates of a pin or a path, just single click it. Right click on a blank area of the map for special functions.</p>
 </div>
 <br />
 
