Separate stylesheet for modes

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 <body>
 	<div id="itemConsole">
 	<div id="cslButtons">
-		<kbd id="cslButtonClose" class="curClick" title="<dfn>Close Console<dfn>"></kbd>
-		<kbd id="cslButtonSelect" class="curClick" title="<dfn>Select Console<dfn>"></kbd>
+		<kbd id="cslClose" class="curClick" title="<dfn>Close Console<dfn>"></kbd>
+		<kbd id="cslSelect" class="curClick" title="<dfn>Select Console<dfn>"></kbd>
 	</div>
 	<div id="cslContent"></div>
 	</div>
@@ -95,8 +95,8 @@
 				<div id="mapGPS" class="mapHUDContainer">
 					<img id="mapGPSButton" class="mapHUDButton" data-title="click to center character" src="img/map/gps.png" alt="GPS" />
 					<div id="mapGPSPopup" class="mapHUDPopup cntComposition">
-						<label title="Automatically scroll the map to your in-game location."><input id="opt_bol_followCharacter" type="checkbox" />Follow Game Character</label>
-						<label title="Automatically move the map character pin to your in-game location."><input id="opt_bol_displayCharacter" type="checkbox" />Display Character Pin</label>
+						<label title="Automatically scroll the map to your in-game location."><img data-src="img/map/gps.png" /><input id="opt_bol_followCharacter" type="checkbox" />Follow Game Character</label>
+						<label title="Automatically move the map character pin to your in-game location."><img data-src="img/map/pin_character.png" /><input id="opt_bol_displayCharacter" type="checkbox" />Display Character Pin</label>
 						<label title="Milliseconds before your character is pinpointed again.<br />This should not be faster than the overlay's rate."><input id="opt_int_msecGPSRefresh" type="number" min="50" max="1000" step="10" /> GPS Rate (ms)</label>
 					</div>
 				</div>
@@ -216,8 +216,8 @@
 				<div id="wvwGPS" class="mapHUDContainer">
 					<img id="wvwGPSButton" class="mapHUDButton" data-title="click to center character" src="img/map/gps.png" alt="GPS" />
 					<div id="wvwGPSPopup" class="mapHUDPopup cntComposition">
-						<label title="Automatically scroll the map to your in-game location."><input id="opt_bol_followCharacterWvW" type="checkbox" />Follow Game Character</label>
-						<label title="Automatically move the map character pin to your in-game location."><input id="opt_bol_displayCharacterWvW" type="checkbox" />Display Character Pin</label>
+						<label title="Automatically scroll the map to your in-game location."><img data-src="img/map/gps.png" /><input id="opt_bol_followCharacterWvW" type="checkbox" />Follow Game Character</label>
+						<label title="Automatically move the map character pin to your in-game location."><img data-src="img/map/pin_character.png" /><input id="opt_bol_displayCharacterWvW" type="checkbox" />Display Character Pin</label>
 					</div>
 				</div>
 				<div id="wvwOptions" class="mapHUDContainer">
