--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 						</div>
 						<div id="mapOptionsOther">
 							<label title="Show/Hide region-colored borders over zones."><img data-src="img/map/border.png" /><input id="opt_bol_showZoneBorders" type="checkbox" /> Show zone borders</label>
+							<!--<label title="Show/Hide gateways between zones."><img data-src="img/map/gateway_zone.png" /><input id="opt_bol_showGateways" type="checkbox" /> Show gateways</label>-->
 							<label title="Double click on the map to lay/remove a personal pin.<br />This option will draw a path from these pins."><img data-src="img/map/pin_white.png" /><input id="opt_bol_showPersonalPaths" type="checkbox" /> Show personal paths</label>
 							<label title="Show/Hide the colored chain paths of world bosses."><img data-src="img/map/pin_green.png" /><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths</label>
 							<label title="Automatically scroll the map to the next predicted world boss event.<br />You'll need to be on the chains page."><img data-src="img/map/path.png" /><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
