Updated Story timing

--- a/mapsrc.html
+++ b/mapsrc.html
@@ -492,11 +492,11 @@ These open world chests are separate from Jumping Puzzles and Mini-Dungeons. Hol
 		<label title="Story"><input data-money="5000" data-mode="S" type="checkbox" />S</label>
 	</div>
 	<div class="chlDungeonBar" data-name="FOTM">
-		<label title="01-10"><input data-money="10000" data-mode="F" type="checkbox" />0</label>
-		<label title="11-20"><input data-money="11000" data-mode="F" type="checkbox" />1</label>
-		<label title="21-30"><input data-money="12000" data-mode="F" type="checkbox" />2</label>
-		<label title="31-40"><input data-money="13000" data-mode="F" type="checkbox" />3</label>
-		<label title="41-50"><input data-money="14000" data-mode="F" type="checkbox" />4</label>
+		<label title="1-20"><input data-money="10000" data-mode="F" type="checkbox" />20</label>
+		<label title="21-50"><input data-money="11000" data-mode="F" type="checkbox" />50</label>
+		<label title="51-100"><input data-money="12000" data-mode="F" type="checkbox" />100</label>
+		<label title="Daily Scale A"><input data-money="13000" data-mode="F" type="checkbox" />A</label>
+		<label title="Daily Scale B"><input data-money="14000" data-mode="F" type="checkbox" />B</label>
 	</div>
 </div>
 
