Added Heart of Thorns zones

--- a/index.html
+++ b/index.html
@@ -146,13 +146,18 @@
 								<li data-zone="bloodtide"></li>
 								<li data-zone="southsun"></li>
 							</ul>
-							<br />
+							<h2 data-region="magus"></h2>
+							<ul>
+								<li data-zone="verdant"></li>
+								<li data-zone="auric"></li>
+								<li data-zone="tangled"></li>
+								<li data-zone="dragon"></li>
+							</ul>
 							<h2 data-region="wastes"></h2>
 							<ul>
 								<li data-zone="dry"></li>
 								<li data-zone="silverwastes"></li>
 							</ul>
-							<br />
 							<h2 data-region="jungle"></h2>
 							<ul>
 								<li data-zone="rata"></li>
@@ -175,7 +180,6 @@
 								<li data-zone="timberline"></li>
 								<li data-zone="frostgorge"></li>
 							</ul>
-							<br />
 							<h2 data-region="ascalon"></h2>
 							<ul>
 								<li data-zone="citadel"></li>
@@ -186,7 +190,6 @@
 								<li data-zone="blazeridge"></li>
 								<li data-zone="fireheart"></li>
 							</ul>
-							<br />
 							<h2 data-region="orr"></h2>
 							<ul>
 								<li data-zone="straits"></li>
