Added Flax resource node

--- a/helpsrc.html
+++ b/helpsrc.html
@@ -66,6 +66,7 @@
 2015 June 22 - Guild missions<br />
 2015 August 4 - Tile mode<br />
 2015 September 10 - Dashboard<br />
+2015 October 6 - World completion route<br />
 </p>
 
 <hr />
