--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
 				<div id="dsbSale"></div>
 				<div id="dsbStory" class="jsScrollable"></div>
 			</div>
+			<div id="itemTimeline">
+				<div id="tmlIndicator"></div>
+			</div>
 			<time id="itemMapTime"></time>
 			<div id="itemMapCoordinates">
 				<input id="mapCoordinatesMouse" type="text" />
@@ -501,6 +504,7 @@
 					<h2>Map</h2>
 					<label title="Show/Hide the map area on the left."><input id="opt_bol_showMap" type="checkbox" /> Show the map</label>
 					<label title="Show/Hide GW2 official event countdowns and gem sales on the top right corner of the map pane. Requires reload."><input id="opt_bol_showDashboard" type="checkbox" /> Show the dashboard</label>
+					<label title="Show/Hide Heart of Thorns meta events timeline."><input id="opt_bol_showTimeline" type="checkbox" /> Show the timeline</label>
 					<span>For map options, hover over the <img class="cntIconExample" src="img/map/display.png" alt="Icon" /> button on the top right corner of the map pane.</span><br />
 					<br />
 					<h2>Alarm</h2>
