--- a/mapsrc.html
+++ b/mapsrc.html
@@ -516,7 +516,7 @@ These open world chests are separate from Jumping Puzzles and Mini-Dungeons. Hol
 <br />
 <kbd class="jsHelpCollapsible"></kbd>
 <div>
-<p>Please consult the <a href="http://forum.renaka.com/topic/5888854/">Map User Manual</a> for detailed and visual explanation of map features.
+<p>Consult the <a href="http://forum.renaka.com/topic/5888854/">Map User Manual</a> for detailed and visual explanation of map features.
 </div>
 <br />
 
