--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 		==================================================================== -->
 		<section id="paneContent" class="paneApp">
 			<article id="plateChains" class="jsScrollable"><!-- This plate will be populated by JS -->
-				<div id="chnProgress"></div>
+				<div id="chnProgressBar"><div id="chnProgress0"></div><div id="chnProgress1"></div></div>
 				<div id="chnOptions">
 					<img id="optAlarmIcon" src="img/ui/placeholder.png" alt="Mode"/><img id="optAlarmSpeaker" class="curClick" title="Click to preview audio." src="img/ui/speaker.png" alt="Alarm"/>
 					<img id="optChainsIcon" src="img/ui/toggle.png" alt="Toggle" />
