Timeline in tile mode

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<div id="itemMapPeripheralNorth" class="itemMapPeripheral">
 				<div id="mapQuickURL">
 					<u><a class="jsTranslate linkExternal" title="<dfn>Go to Forum</dfn>" href="http://forum.renaka.com/forum/368355/">forum</a></u><span> /</span>
-					<u><a class="jsTranslate" title="<dfn>Switch to Simple Mode (clock only)</dfn><br />gw2timer.com/s<br /><div class='mapLoc'><img src='http://i.imgur.com/ERlYRR3.png' /></div>" href="./?mode=Simple">simple</a></u><span> /</span>
+					<u><a class="jsTranslate" title="<dfn>Switch to Simple Mode (clock only)</dfn><br />gw2timer.com/s<br /><div class='mapLoc'><img src='http://i.imgur.com/Nk42voP.png' /></div>" href="./?mode=Simple">simple</a></u><span> /</span>
 					<u><a class="jsTranslate" title="<dfn>Switch to Mobile Mode (right panel only)</dfn><br />gw2timer.com/m<br /><div class='mapLoc'><img src='http://i.imgur.com/0QsaeY7.png' /></div>" href="./?mode=Mobile">mobile</a></u><span> /</span>
 					<u><a class="jsTranslate" title="<dfn>Switch to Tile Mode (timers only)</dfn><br />gw2timer.com/t<br /><div class='mapLoc'><img src='http://i.imgur.com/SDseVJE.png' /></div>" href="./?mode=Tile">tile</a></u>
 				</div>
