--- a/mapsrc.html
+++ b/mapsrc.html
@@ -439,8 +439,8 @@ These open world chests are separate from Jumping Puzzles and Mini-Dungeons. Hol
 		<label title="1-20"><input data-money="10000" data-mode="F" type="checkbox" />20</label>
 		<label title="21-50"><input data-money="12500" data-mode="F" type="checkbox" />50</label>
 		<label title="51-100"><input data-money="15000" data-mode="F" type="checkbox" />100</label>
-		<label title="Daily Scale A"><input data-money="5000" data-mode="F" type="checkbox" />A</label>
-		<label title="Daily Scale B"><input data-money="5000" data-mode="F" type="checkbox" />B</label>
+		<label title="Daily Scale Low"><input data-money="5000" data-mode="F" type="checkbox" />Lo</label>
+		<label title="Daily Scale High"><input data-money="5000" data-mode="F" type="checkbox" />Hi</label>
 	</div>
 </div>
 
